# inkwell

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  build.sh  inkwell-cli  pyproject.toml  requirements.txt  run.sh  stop.sh
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: Dashboard.js  Header.css  Header.js  ItemDetails.js  ItemForm.js  ItemList.js  ItemsPage.js  ItemsSidebar.css  ItemsSidebar.js  ProjectEdit.css  ProjectEdit.js  ProjectWhiteboard.css  ProjectWhiteboard.js  PromptDetails.js  PromptForm.js  PromptsSidebar.css  PromptsSidebar.js  ResizableLayout.css  ResizableLayout.js  Sidebar.css  Sidebar.js
inkwell/: __init__.py  cli.py  config.py  database.py  server.py
inkwell/api/: __init__.py
inkwell/api/health/: routes.py
inkwell/api/items/: models.py  routes.py
inkwell/api/projects/: __init__.py  models.py  routes.py
inkwell/api/prompts/: models.py  routes.py
inkwell/api/settings/: routes.py
inkwell/api/users/: routes.py
inkwell/cli/: __init__.py
inkwell/client_cli/: main.py
