[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inkwell"
version = "0.1.0"
description = "A command line tool that launches a local React website with FastAPI backend"
authors = [{name = "Inkwell Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "click>=8.0.0",
    "aiosqlite>=0.19.0",
]

[project.scripts]
inkwell = "inkwell.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]

[tool.setuptools.packages.find]
include = ["inkwell*"]

[tool.setuptools.package-data]
inkwell = ["frontend/build/**/*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"